--- a/klippki.html
+++ b/klippki.html
@@ -111,7 +111,7 @@
 </head>
 <body>
 <h1>WERYFIKACJA ANTY-DDOS</h1>
-<div id="message"><b>NACIŚNIJ SPACJE<b></div>
+<div id="message"><b>WYKONAJ TESTY<b></div>
 <div id="scWrap"></div>
 <div id="fbWrap"></div>
 
@@ -374,4 +374,5 @@ src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/so
 </script>
 </body>
 </html>
+
 
