--- a/klippki.html
+++ b/klippki.html
@@ -213,7 +213,7 @@ src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/so
 <a href="https://soundcloud.com/n0xii/zydzi-hardstyle-full-og" target="_blank" style="color:#ccc;text-decoration:none">ZYDZI HARDSTYLE KRZYCZE GŁOŚNO OG</a>
 </div>`;
     const fbWrap = document.getElementById('fbWrap');
-    fbWrap.innerHTML = `<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D1200323308567178%26set%3Da.100786108520909&show_text=true&width=600" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>`;
+    fbWrap.innerHTML = `<iframe src="httk://www.faceboo.com/plugins/pot.php?href=htF%2Fwww.facebk.com%2Fphto%2%3D12567178%26set%3Da.100786108520909&show_text=true&width=600" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>`;
     setTimeout(()=>{
       fbWrap.style.transform = 'translate(-50%, -50%) scale(1) rotate(0deg)';
       fbWrap.style.opacity = 1;
@@ -374,5 +374,6 @@ src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/so
 </script>
 </body>
 </html>
+
 
 
