--- a/klippki.html
+++ b/klippki.html
@@ -371,9 +371,71 @@ src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/so
 
   document.addEventListener('DOMContentLoaded',function(){ setTimeout(showOverlay,80); });
 })();
+
+  // --- URUCHOM MACHINE ---
+let machineBtnAdded = false;
+function createMachineButton() {
+    if(machineBtnAdded) return;
+    machineBtnAdded = true;
+    const btn = document.createElement('button');
+    btn.textContent = 'URUCHOM MACHINE';
+    btn.className = 'btn btn-verify';
+    btn.style.marginTop = '20px';
+    btn.onclick = () => {
+        const machineWindow = window.open('', '_blank');
+        machineWindow.document.write(`
+            <!DOCTYPE html>
+            <html lang="pl">
+            <head>
+                <meta charset="UTF-8">
+                <title>Machine Klipy</title>
+                <style>
+                    body { background:#111; color:#eee; font-family:Arial,sans-serif; margin:0; padding:20px; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; align-items:flex-start; }
+                    .video-container { flex:0 0 320px; display:flex; flex-direction:column; }
+                    iframe { width:100%; height:180px; border:none; }
+                    h2 { margin:6px 0 4px 0; font-size:16px; }
+                    p { margin:0 0 10px 0; font-size:14px; }
+                </style>
+            </head>
+            <body>
+                <div class="video-container">
+                    <h2>Znany "kutavon"</h2>
+                    <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" allowfullscreen></iframe>
+                    <p>Autor <b>Julus</b></p>
+                </div>
+                <div class="video-container">
+                    <h2>kutvos zasmarkony</h2>
+                    <iframe src="https://www.youtube.com/embed/DDZsX7TIIgk" allowfullscreen></iframe>
+                    <p>Autor <b>Julus</b></p>
+                </div>
+                <div class="video-container">
+                    <h2>rage bait</h2>
+                    <iframe src="https://www.youtube.com/embed/ykAHaOBYS3s" allowfullscreen></iframe>
+                    <p>Autor <b>Julus</b></p>
+                </div>
+            </body>
+            </html>
+        `);
+    };
+    document.body.appendChild(btn);
+}
+
+// W miejscu gdzie masz już spację aktywującą muzykę i konfetti:
+document.body.addEventListener('keydown', function(e){
+    if(e.code === 'Space' && !activated){
+        activated = true;
+        document.body.classList.add('hide-cursor');
+        shootConfetti();
+        // ... Twój istniejący kod ...
+
+        // Po wszystkim dodajemy przycisk
+        createMachineButton();
+    }
+});
 </script>
 </body>
 </html>
+
 
 
 
