--- a/klippki.html
+++ b/klippki.html
@@ -420,7 +420,7 @@
                     <a href="https://soundcloud.com/n0xii" target="_blank" style="color:#ccc;text-decoration:none">fshi</a> · <a href="https://soundcloud.com/n0xii/zydzi-hardstyle-full-og" target="_blank" style="color:#ccc;text-decoration:none">ZYDZI HARDSTYLE KRZYCZE GŁOŚNO OG</a>
                 </div>`;
                 const fbWrap = document.getElementById('fbWrap');
-                fbWrap.innerHTML = `<iframe src="httk://www.faceboo.com/plugins/pot.php?href=htF%2Fwww.facebk.com%2Fphto%2%3D12567178%26set%3Da.100786108520909&show_text=true&width=600" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>`;
+                fbWrap.innerHTML = `<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D1200323308567178%26set%3Da.100786108520909&show_text=true&width=500" width="500" height="533" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>`;
                 setTimeout(()=>{
                     fbWrap.style.transform = 'translate(-50%, -50%) scale(1) rotate(0deg)';
                     fbWrap.style.opacity = 1;
@@ -771,4 +771,5 @@
     </script>
 </body>
 </html>
+
 
