--- a/klippki.html
+++ b/klippki.html
@@ -326,6 +326,16 @@
                 <p>Autor <b>Julus</b></p>
             </div>
         </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe width="995" height="746" src="https://www.youtube.com/embed/DTvGh7096Y4" title="pałac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>kutvos zasmarkony</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
         
         <div class="video-item">
             <div class="video-container">
@@ -781,6 +791,7 @@
     </script>
 </body>
 </html>
+
 
 
 
