--- a/klippki.html
+++ b/klippki.html
@@ -346,6 +346,186 @@
                 <p>Autor <b>Julus</b></p>
             </div>
         </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/6d7HCDqedlg" title="Kutavon 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="video-info">
+                <h2>Znany "kutavon"</h2>
+                <p>Autor <b>Julus</b></p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -791,6 +971,7 @@
     </script>
 </body>
 </html>
+
 
 
 
