--- a/klippki.html
+++ b/klippki.html
@@ -231,6 +231,8 @@
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
+    overflow-y: auto;
+    max-height: 100vh;
 }
 #clips h1 {
     color: #ff5500;
@@ -971,6 +973,7 @@
     </script>
 </body>
 </html>
+
 
 
 
