--- a/klippki.html
+++ b/klippki.html
@@ -286,6 +286,7 @@
 }
     </style>
 </head>
+    <meta name="google-adsense-account" content="ca-pub-XXXXXXXXXXXXXXX">
 <body>
     <h1>WERYFIKACJA ANTY-DDOS</h1>
     <div id="message"><b>WYKONAJ TESTY<b></div>
@@ -973,6 +974,7 @@
     </script>
 </body>
 </html>
+
 
 
 
