--- a/klippki.html
+++ b/klippki.html
@@ -286,7 +286,8 @@
 }
     </style>
 </head>
-    <meta name="google-adsense-account" content="ca-pub-XXXXXXXXXXXXXXX">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5486175208501620"
+     crossorigin="anonymous"></script>
 <body>
     <h1>WERYFIKACJA ANTY-DDOS</h1>
     <div id="message"><b>WYKONAJ TESTY<b></div>
@@ -974,6 +975,7 @@
     </script>
 </body>
 </html>
+
 
 
 
