--- a/klippki.html
+++ b/klippki.html
@@ -289,6 +289,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5486175208501620"
      crossorigin="anonymous"></script>
 <body>
+    <img id="rightSideImage" src="./G4_1_EN.png" alt="Promocja">
     <h1>WERYFIKACJA ANTY-DDOS</h1>
     <div id="message"><b>WYKONAJ TESTY<b></div>
     <div id="scWrap"></div>
@@ -805,6 +806,7 @@
     </script>
 </body>
 </html>
+
 
 
 
