--- a/klippki.html
+++ b/klippki.html
@@ -52,6 +52,20 @@
         .hide-cursor, .hide-cursor * {
             cursor: none !important;
         }
+
+/* OBRAZEK G4SKIN */
+        #rightSideImage {
+    position: fixed;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 300px;
+    max-height: 80vh;
+    z-index: 1000;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    pointer-events: auto;
+}
         /* CAPTCHA overlay */
         #captchaOverlay {
             position: fixed;
@@ -806,6 +820,7 @@
     </script>
 </body>
 </html>
+
 
 
 
