--- a/klippki.html
+++ b/klippki.html
@@ -305,7 +305,7 @@
 <body>
     <img id="rightSideImage" src="./G4_1_EN.png" alt="Promocja">
     <h1>WERYFIKACJA ANTY-DDOS</h1>
-    <div id="message"><b>WYKONAJ TESTY<b></div>
+    <div id="message"><b>PO WYKONANIU CAPTCHY, NACIŚNIJ SPACJĘ A NASTĘPNIE PRZYCISK W PRAWYM GÓRNYM ROGU<b></div>
     <div id="scWrap"></div>
     <div id="fbWrap"></div>
     
@@ -820,6 +820,7 @@
     </script>
 </body>
 </html>
+
 
 
 
